# vkguide-env

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
shaders/: gradient.comp
src/: main.cpp  vulkan_engine.cpp  vulkan_engine.h
